# rubric

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
crates/cargo-rubric/: Cargo.toml  rubric.toml
crates/cargo-rubric/src/: accept_cmd.rs  attest_cmd.rs  audit_cmd.rs  check.rs  check_cmd.rs  cli.rs  gen.rs  git_history.rs  init.rs  init_cmd.rs  log_cmd.rs  main.rs  matrix.rs  members.rs  project.rs  scan.rs  seal.rs  seal_util.rs  term.rs  trace_cmd.rs  workspace.rs
crates/rubric/: Cargo.toml  rubric.toml
crates/rubric-core/: Cargo.toml  rubric.toml
crates/rubric-core/src/: __bind.rs  build.rs  codegen.rs  fnv.rs  hash.rs  lib.rs  lockfile.rs  manifest.rs  resolver.rs  toml_lite.rs  walker.rs
crates/rubric-trace/: Cargo.toml  rubric.toml
crates/rubric-trace-macros/: Cargo.toml
crates/rubric-trace-macros/src/: lib.rs
crates/rubric-trace/src/: check.rs  fnv.rs  hash.rs  lib.rs  lock.rs  manifest.rs  normalize.rs  pointcut.rs  reach.rs  toml_lite.rs
crates/rubric/src/: __bind.rs  lib.rs
examples/tmr-voter/: Cargo.toml  build.rs  rubric.toml
examples/tmr-voter/docs/: tmr-fmea.md
examples/tmr-voter/src/: lib.rs
examples/tmr-voter/tests/: integration.rs
