[workspace]
resolver = "2"
members = ["crates/rubric-core", "crates/rubric", "crates/cargo-rubric", "examples/tmr-voter"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshfinley/rubric"
homepage = "https://github.com/joshfinley/rubric"
keywords = ["traceability", "requirements", "safety", "compliance", "testing"]
categories = ["development-tools::cargo-plugins", "development-tools::testing"]
