[package]
name = "cargo-rubric"
description = "Cargo subcommand for requirements traceability — declare, annotate, and detect drift"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "cargo-rubric"
path = "src/main.rs"

[dependencies]
rubric-trace = { version = "0.3.0", path = "../rubric-trace" }
rustc_lexer = "0.1.0"
