[package]
name = "rubric-core"
description = "Shared types and build-time drift detection for the rubric traceability toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
rustc_lexer = "0.1"

[dev-dependencies]
rubric = { package = "rubric-attr", version = "0.1.0", path = "../rubric" }
