[package]
name = "rubric-trace-macros"
description = "Attribute macros for requirements traceability — #[satisfies(...)] and #[verifies(...)]"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
