[package]
name = "rubric-trace"
description = "Shared types and build-time drift detection for the rubric traceability toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

