[package]
name = "rubric-attr"
description = "Attribute macros for requirements traceability — #[satisfies(...)] and #[verifies(...)]"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
rubric-core = { version = "0.1.0", path = "../rubric-core" }
